--- a/tic.html
+++ b/tic.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="tac.css">
+  <link rel="manifest" href="manifest.json">
   <style>
     .theme-classic { background-color: #f9fafb; color: #111827; }
     .theme-space { background: linear-gradient(to right, #1e3a8a, #3b82f6); color: #fff; }
