--- a/tic.html
+++ b/tic.html
@@ -82,6 +82,11 @@
       document.getElementById("drawCount").textContent = localStorage.getItem("draws") || 0;
     };
     updateStats();
+if ('serviceWorker' in navigator) {
+  navigator.serviceWorker.register('/sw.js')
+    .then(() => console.log("Service Worker Registered!"))
+    .catch(error => console.log("Service Worker Registration Failed:", error));
+}
   </script>
   <script src="toe.js"></script>
 </body>
