--- a/tic.html
+++ b/tic.html
@@ -31,6 +31,7 @@
       <a href="exit.html"><button>Exit</button></a>
       <a href="achievement.html"><button>Achievements</button></a>
     </div>
+    <button id="installApp" style="display: none;">Install Tic Tac Toe</button>
     <button id="darkModeToggle">Toggle Dark Mode</button>
     <div class="mt-4">
       <label for="themeSelector" class="block mb-1 font-semibold">Choose Theme:</label>
