--- a/tic.html
+++ b/tic.html
@@ -9,12 +9,12 @@
   <link rel="manifest" href="manifest.json">
   <style>
   .theme-classic {
-    --bg-color: #f9fafb;
-    --text-color: #111827;
+    --bg-color: white;
+    --text-color: black;
   }
   html.dark .theme-classic {
-    --bg-color: #000;
-    --text-color: #fff;
+    --bg-color: black;
+    --text-color: white;
   }
 
   .theme-space {
