--- a/tic.html
+++ b/tic.html
@@ -9,8 +9,8 @@
   <link rel="manifest" href="manifest.json">
   <style>
   .theme-classic {
-    --bg-color: white;
-    --text-color: black;
+    --bg-color: black;
+    --text-color: white;
   }
   html.dark .theme-classic {
     --bg-color: black;
