--- a/play.html
+++ b/play.html
@@ -7,6 +7,22 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="tac.css">
   <style>
+.theme-classic {
+  --bg-color: linear-gradient(135deg, #f9fafb, #ffe29f, #ffa8a8, #a18cd1);
+  --text-color: #111827;
+}
+
+/* === Space Theme === */
+.theme-space {
+  --bg-color: linear-gradient(to right, #1e3a8a, #3b82f6);
+  --text-color: #fff;
+}
+
+/* === Candy Theme === */
+.theme-candy {
+  --bg-color: linear-gradient(to right, #ec4899, #facc15);
+  --text-color: #1f2937;
+}
     .pulse { animation: pulse 1.5s infinite; }
     @keyframes pulse {
       0% { transform: scale(1); opacity: 1; }
