--- a/tic.html
+++ b/tic.html
@@ -54,11 +54,11 @@
     <button id="darkModeToggle">Toggle Dark Mode</button>
     <div class="mt-4">
       <label for="themeSelector" class="block mb-1 font-semibold">Choose Theme:</label>
-      <select id="themeSelector" class="p-2 rounded">
-        <option value="theme-classic">Classic</option>
-        <option value="theme-space">Space</option>
-        <option value="theme-candy">Candy</option>
-      </select>
+     <select id="themeSelector" class="p-2 rounded">
+  <option value="classic">Classic</option>
+  <option value="space">Space</option>
+  <option value="candy">Candy</option>
+</select>
     </div>
     <div class="mt-4">
       <img src="https://i.postimg.cc/MTtsGfLD/file-00000000f02461f7b3bcfb0cb4e1379b.png" class="mx-auto w-24 h-24 pulse">
