--- a/game.html
+++ b/game.html
@@ -7,14 +7,43 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="tac.css">
   <style>
-    .glow { box-shadow: 0 0 15px rgba(255, 255, 255, 0.3); }
-    .pulse { animation: pulse 1.5s infinite; }
-    @keyframes pulse {
-      0% { transform: scale(1); opacity: 1; }
-      50% { transform: scale(1.05); opacity: 0.7; }
-      100% { transform: scale(1); opacity: 1; }
-    }
-  </style>
+  .theme-classic {
+    --bg-color: linear-gradient(135deg, #f9fafb, #ffe29f, #ffa8a8, #a18cd1);
+    --text-color: #111827;
+  }
+
+  .theme-space {
+    --bg-color: linear-gradient(to right, #1e3a8a, #3b82f6);
+    --text-color: #ffffff;
+  }
+
+  .theme-candy {
+    --bg-color: linear-gradient(to right, #ec4899, #facc15);
+    --text-color: #1f2937;
+  }
+
+  html.dark {
+    --border-color: #ffffff;
+    --hover-color: #444444;
+    --glow-bright: #f9fafb;
+    --glow-dark: #cccccc;
+  }
+
+  body {
+    background: var(--bg-color);
+    color: var(--text-color);
+    transition: background 0.4s, color 0.4s;
+  }
+
+  .pulse {
+    animation: pulse 2s infinite;
+  }
+
+  @keyframes pulse {
+    0%, 100% { transform: scale(1); }
+    50% { transform: scale(1.05); }
+  }
+</style>
 </head>
 <body class="full-screen flex-center">
   <div class="container space-y-6">
